Added the MySQL options to the SQLi rule properties

--- a/com.waratek.rules.ui.eef/src-gen/com/waratek/rules/providers/rulesMessages_fr.properties
+++ b/com.waratek.rules.ui.eef/src-gen/com/waratek/rules/providers/rulesMessages_fr.properties
@@ -91,6 +91,8 @@ Native_PropertiesEditionPart_ChecksumLabel=Checksum :
 SQLInjectionPropertiesEditionPart_ActionLabel=Action : 
 SQLInjectionPropertiesEditionPart_LogLabel=Log : 
 SQLInjectionPropertiesEditionPart_DatabaseLabel=Database : 
+SQLInjectionPropertiesEditionPart_AnsiQuotesLabel=AnsiQuotes
+SQLInjectionPropertiesEditionPart_NoBackslashEscapesLabel=NoBackslashEscapes
 CommentPropertiesEditionPart_CommentLabel=Comment : 
 PropertiesEditionPart_PropertiesGroupLabel=Propri\u00E9t\u00E9s
 PropertiesEditionPart_EditTableViewerLabel=Editer
